# horizon-rally-dashboard

./: AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
benchmark_dashboard/: __init__.py  dashboard.py
benchmark_dashboard/api/: __init__.py  base.py  db.py  loader.py
benchmark_dashboard/api/db/: __init__.py  base.py  deployments.py  tasks.py
benchmark_dashboard/deployments/: forms.py  panel.py  tables.py  urls.py  views.py
benchmark_dashboard/deployments/templates/deployments/: index.html
benchmark_dashboard/static/benchmark/css/: report.css
benchmark_dashboard/static/benchmark/js/: report.js
benchmark_dashboard/tasks/: forms.py  panel.py  tables.py  urls.py  utils.py  views.py
benchmark_dashboard/tasks/templates/tasks/: _create.html  _select.html  base.mako  create.html  detail.html  index.html  report.mako  select.html
benchmark_dashboard/utils/: __init__.py  async.py  rally.py  tables.py  widgets.py
debian/: _99_benchmark.py  changelog  control  copyright  install  postinst  postrm
